OpenVPN-Server/rootoverlay/etc/iptables/rules.v4
# Hardened IPTables config.

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
#VPN Tunnel
-A INPUT -i eth0 -m state --state NEW -p udp --dport 1194 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT

#This allows connections that match other rules to automatically allow two way communications
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# always allow the loopback
-A OUTPUT -o lo -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Allow pings, this is super helpful for diagnostics
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT

#SSH
-A INPUT -m multiport -p tcp -s 0.0.0.0/0 --dports 22 -j ACCEPT

# forward facing web server
#-A INPUT -m multiport -p tcp -s 0.0.0.0/0 --dports 443,80 -j ACCEPT

#Allow DNS and web connections
-A OUTPUT -m multiport -p tcp -s 0.0.0.0/0 --dports 443,80 -j ACCEPT
-A OUTPUT -m multiport -p udp -s 0.0.0.0/0 --dports 53,853 -j ACCEPT
-A OUTPUT -m tcp -p tcp -s 0.0.0.0/0 --dport 53 -j ACCEPT


#VPN forwarding
-A FORWARD -i eth0 -o tun0 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -s 172.16.15.0/24 -o eth0 -j ACCEPT
-A POSTROUTING -s 172.16.15.0/24 -o eth0 -j MASQUERADE

COMMIT
