OpenVPN-Server/rootoverlay/etc/iptables/rules.v6
# Hardened IPTables config.

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
#VPN Tunnel
-A INPUT -i eth0 -m state --state NEW -p udp --dport 1194 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT

# always allow the loopback
-A OUTPUT -o lo -j ACCEPT
-A INPUT -i lo -j ACCEPT

#This allows connections that match other rules to automatically allow two way communications
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# SSH
-A INPUT -m multiport -p tcp --dports 22 -j ACCEPT

# forward facing web server
#-A INPUT -m multiport -p tcp --dports 443,80 -j ACCEPT

#Allow output for web and DNS
-A OUTPUT -m multiport -p tcp --dports 443,80 -j ACCEPT
-A OUTPUT -m multiport -p udp --dports 53,853 -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 53 -j ACCEPT

COMMIT
